[package]
name = "midi-beeper"
version = "0.1.2"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "A small tool to help create simple melodies from MIDI files"
readme = "README.md"
license= "MIT"
repository = "https://github.com/totalkrill/midi-beeper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom-midi = "0.5.1"
anyhow = "1.0"
rodio = "0.11"
structopt = "0.3"
log = "0.4"
